# jeroboam_ros

./: .clang-format  .envrc.example  .gitignore  .gitmodules  Dockerfile  README.md  asserv.perspective  asserv_layout2.xml  gui.Dockerfile  gui_original.Dockerfile  jeroboam_ros.code-workspace  test.py  tune_motor.xml  tuning_backup.yaml
cross-compile/: Dockerfile  bashrc.bash  (+1 more)
jrb_actuators/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jrb_actuators/jrb_actuators/: actuators.py  arm_action_server.py  arm_teleop.py  dxl_bridge.py  generic_action_server.py
jrb_actuators/jrb_actuators/lib/: custom_dxl_API.py  dxl.py
jrb_actuators/src/: teleop_actuators_joy.cpp
jrb_bringup/: CMakeLists.txt  package.xml
jrb_bringup/launch/: joystick.launch.py  robot.launch.py  robot_state_publisher.launch.py  robotrouge.launch.py  rviz2.launch.py  sim.launch.py  tb3_simulation_launch.py  urdf_rviz2.launch.py
jrb_bringup/maps/: eurobot_map_both.yaml
jrb_bringup/param/: joint_state_publisher_param.yaml  joystick.yaml  lidar_param.yaml  mapper_params_online_async.yaml  marker_publisher.yaml  nav2_params.yaml  panier_camera_info.yaml  panier_camera_param.yaml  robotbleu_can_bridge_param.yaml  robotrouge_camera_info.yaml  robotrouge_camera_param.yaml  robotrouge_can_bridge_param.yaml  robotrouge_joint_state_publisher_param.yaml  twist_mux.yaml
jrb_bringup/rviz/: nav2_default_view.rviz
jrb_bringup/scripts/: 100-arduino.rules  101-rplidar.rules  102-camera.rules  103-can-txqueuelen.rules  104-dynamixel.rules  99-candlelight.rules  arduino.rules  can_bridge.yaml  create_udev_rules.bash  go_to_goal.yaml  jrb_bringup.service  optimize_ubuntu.bash  panier.service  remove_udev_rules.bash  setup_arduino.bash  setup_driver_arduino_nano.bash
jrb_can_bridge/: CMakeLists.txt  package.xml
jrb_can_bridge/include/: LinuxCan.hpp
jrb_can_bridge/include/includes/jeroboam/actuators/motion/: AdaptativePIDConfig_0_1.h  MotionConfig_0_1.h  PIDConfig_0_1.h
jrb_can_bridge/include/includes/jeroboam/actuators/pump/: PumpStatus_0_1.h
jrb_can_bridge/include/includes/jeroboam/actuators/servo/: ServoConfig_0_1.h
jrb_can_bridge/include/includes/jeroboam/sensors/: resistance_0_1.h
jrb_can_bridge/include/includes/uavcan/_register/: Access_1_0.h  List_1_0.h  Name_1_0.h  Value_1_0.h
jrb_can_bridge/include/includes/uavcan/diagnostic/: Record_1_0.h  Record_1_1.h  Severity_1_0.h
jrb_can_bridge/include/includes/uavcan/file/: Error_1_0.h  GetInfo_0_1.h  GetInfo_0_2.h  List_0_1.h  List_0_2.h  Modify_1_0.h  Modify_1_1.h  Path_1_0.h  Path_2_0.h  Read_1_0.h  Read_1_1.h  Write_1_0.h  Write_1_1.h
jrb_can_bridge/include/includes/uavcan/internet/udp/: HandleIncomingPacket_0_1.h  HandleIncomingPacket_0_2.h  OutgoingPacket_0_1.h  OutgoingPacket_0_2.h
jrb_can_bridge/include/includes/uavcan/metatransport/can/: ArbitrationID_0_1.h  BaseArbitrationID_0_1.h  DataClassic_0_1.h  DataFD_0_1.h  Error_0_1.h  ExtendedArbitrationID_0_1.h  Frame_0_1.h  Frame_0_2.h  Manifestation_0_1.h  RTR_0_1.h
jrb_can_bridge/include/includes/uavcan/metatransport/ethernet/: EtherType_0_1.h  Frame_0_1.h
jrb_can_bridge/include/includes/uavcan/node/: ExecuteCommand_1_0.h  ExecuteCommand_1_1.h  GetInfo_1_0.h  GetTransportStatistics_0_1.h  Health_1_0.h  Heartbeat_1_0.h  ID_1_0.h  IOStatistics_0_1.h  Mode_1_0.h  Version_1_0.h
jrb_can_bridge/include/includes/uavcan/pnp/: NodeIDAllocationData_1_0.h  NodeIDAllocationData_2_0.h
jrb_can_bridge/include/includes/uavcan/primitive/: Empty_1_0.h  String_1_0.h  Unstructured_1_0.h
jrb_can_bridge/include/includes/uavcan/time/: GetSynchronizationMasterInfo_0_1.h  Synchronization_1_0.h  SynchronizedTimestamp_1_0.h  TAIInfo_0_1.h  TimeSystem_0_1.h
jrb_can_bridge/include/jrb_can_bridge/: CanBridge.hpp  CanBridgeNode.hpp  CanBridgeRx.hpp  CanBridgeTx.hpp  CanardInterface.hpp  CyphalWrapper.hpp  LinuxCan.hpp  jrb_can_bridge.hpp  param_utils.hpp
jrb_can_bridge/src/: CanBridge.cpp  CanBridgeCallbacks.cpp  CanBridgeNode.cpp  CanBridgePublishers.cpp  CanBridgeRx.cpp  CanBridgeTx.cpp  CyphalWrapper.cpp  LinuxCan.cpp  jrb_can_bridge.cpp  param_utils.cpp
jrb_hardware_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jrb_hardware_bridge/jrb_hardware_bridge/: hardware_bridge.py  hardware_bridge_can.py  hardware_bridge_sio.py  hardware_bridge_uart.py  raspi_gpio.py
jrb_hardware_bridge/scripts/: flash_arduino.bash
jrb_hardware_bridge/src/: gpio_node.cpp
jrb_hardware_bridge/src/firmware/: firmware.ino
jrb_msgs/: CMakeLists.txt  package.xml
jrb_msgs/action/: EmptyAction.action  GoToPose.action
jrb_msgs/msg/: AdaptativePIDConfig.msg  ArmStatus.msg  MotionBoardDataFrame.msg  MotionConfig.msg  PIDConfig.msg  PIDState.msg  SampleDetected.msg  SampleDetectedArray.msg  ServoAngle.msg  ServoConfig.msg  ServoGenericCommand.msg  ServoGenericRead.msg  ServoGenericReadResponse.msg  ServoID.msg  ServoStatus.msg  SimplifiedGoalStatus.msg  SliderConfig.msg  SliderPosition.msg  SliderStatus.msg  StackSample.msg
jrb_screen/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jrb_screen/jrb_screen/: screen_manager.py
jrb_screen/scripts/: install_raylib.bash
jrb_screen/src/: screen_manager.cpp
jrb_sensors/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jrb_sensors/jrb_sensors/: ClusterBuffer.py  TfMessageFilters.py  cherries_counter.py  obstacle_detector.py  sample_detector.py
jrb_sensors/launch/: panier.launch.py  rviz2.launch.py
jrb_sensors/meshes/: disk_brown.dae  disk_pink.dae  disk_yellow.dae  echantillon_bleu.dae
jrb_sensors/param/: panier_camera_param.yaml
jrb_sensors/resource/: led_panier.ino
jrb_sensors/src/: sample_detector.cpp
jrb_strategy2/: CMakeLists.txt  jrb_strategy_tree_nodes.xml  package.xml
jrb_strategy2/config/: bt_trace.fbl  test.xml
jrb_strategy2/include/jrb_strategy2/nodes/condition/: is_equal_condition.hpp  is_match_started_condition.hpp  is_timer_over_condition.hpp
jrb_strategy2/src/: brain_node.cpp  marker_publisher.cpp
jrb_strategy2/src/nodes/condition/: is_equal_condition.cpp  is_match_started_condition.cpp  is_timer_over_condition.cpp
(+277 files in other folders)
