<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jrb_bringup</name>
  <version>0.0.0</version>
  <description>
    ROS 2 launch scripts
  </description>
  <maintainer email="axel@mousset.me">Axel Mousset</maintainer>
  <license>TODO: License declaration</license>

  <author email="axel@mousset.me">Axel Mousset</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>jrb_actuators</exec_depend>
  <exec_depend>jrb_description</exec_depend>
  <exec_depend>jrb_hardware_bridge</exec_depend>
  <exec_depend>jrb_sensors</exec_depend>
  <exec_depend>jrb_strategy</exec_depend>
  <exec_depend>jrb_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>