cmake_minimum_required(VERSION 3.8)
project(jrb_can_bridge)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED) 
include_directories(libcanard/libcanard)
include_directories(include/includes)
include_directories(include/includes/jeroboam)
include_directories(include/includes/jeroboam/actuators)
include_directories(include/includes/jeroboam/actuators/motion)
include_directories(include/includes/jeroboam/actuators/pump)
include_directories(include/includes/jeroboam/actuators/servo)
include_directories(include/includes/jeroboam/sensors)
include_directories(include/includes/nunavut)
include_directories(include/includes/nunavut/support)
include_directories(include/includes/reg)
include_directories(include/includes/reg/udral)
include_directories(include/includes/reg/udral/physics)
include_directories(include/includes/reg/udral/physics/acoustics)
include_directories(include/includes/reg/udral/physics/dynamics)
include_directories(include/includes/reg/udral/physics/dynamics/rotation)
include_directories(include/includes/reg/udral/physics/dynamics/translation)
include_directories(include/includes/reg/udral/physics/electricity)
include_directories(include/includes/reg/udral/physics/kinematics)
include_directories(include/includes/reg/udral/physics/kinematics/cartesian)
include_directories(include/includes/reg/udral/physics/kinematics/geodetic)
include_directories(include/includes/reg/udral/physics/kinematics/rotation)
include_directories(include/includes/reg/udral/physics/kinematics/translation)
include_directories(include/includes/reg/udral/physics/optics)
include_directories(include/includes/reg/udral/physics/thermodynamics)
include_directories(include/includes/reg/udral/physics/time)
include_directories(include/includes/reg/udral/service)
include_directories(include/includes/reg/udral/service/actuator)
include_directories(include/includes/reg/udral/service/actuator/common)
include_directories(include/includes/reg/udral/service/actuator/esc)
include_directories(include/includes/reg/udral/service/actuator/servo)
include_directories(include/includes/reg/udral/service/battery)
include_directories(include/includes/reg/udral/service/common)
include_directories(include/includes/reg/udral/service/sensor)
include_directories(include/includes/uavcan)
include_directories(include/includes/uavcan/_register)
include_directories(include/includes/uavcan/diagnostic)
include_directories(include/includes/uavcan/file)
include_directories(include/includes/uavcan/internet/udp)
include_directories(include/includes/uavcan/metatransport)
include_directories(include/includes/uavcan/metatransport/can)
include_directories(include/includes/uavcan/metatransport/ethernet)
include_directories(include/includes/uavcan/metatransport/serial)
include_directories(include/includes/uavcan/metatransport/udp)
include_directories(include/includes/uavcan/node)
include_directories(include/includes/uavcan/pnp)
include_directories(include/includes/uavcan/primitive)
include_directories(include/includes/uavcan/primitive/array)
include_directories(include/includes/uavcan/primitive/scalar)
include_directories(include/includes/uavcan/si)
include_directories(include/includes/uavcan/si/sample)
include_directories(include/includes/uavcan/si/sample/acceleration)
include_directories(include/includes/uavcan/si/sample/angle)
include_directories(include/includes/uavcan/si/sample/angular_acceleration)
include_directories(include/includes/uavcan/si/sample/angular_velocity)
include_directories(include/includes/uavcan/si/sample/duration)
include_directories(include/includes/uavcan/si/sample/electric_charge)
include_directories(include/includes/uavcan/si/sample/electric_current)
include_directories(include/includes/uavcan/si/sample/energy)
include_directories(include/includes/uavcan/si/sample/force)
include_directories(include/includes/uavcan/si/sample/frequency)
include_directories(include/includes/uavcan/si/sample/length)
include_directories(include/includes/uavcan/si/sample/magnetic_field_strength)
include_directories(include/includes/uavcan/si/sample/mass)
include_directories(include/includes/uavcan/si/sample/power)
include_directories(include/includes/uavcan/si/sample/pressure)
include_directories(include/includes/uavcan/si/sample/temperature)
include_directories(include/includes/uavcan/si/sample/torque)
include_directories(include/includes/uavcan/si/sample/velocity)
include_directories(include/includes/uavcan/si/sample/voltage)
include_directories(include/includes/uavcan/si/sample/volume)
include_directories(include/includes/uavcan/si/sample/volumetric_flow_rate)
include_directories(include/includes/uavcan/si/unit)
include_directories(include/includes/uavcan/si/unit/acceleration)
include_directories(include/includes/uavcan/si/unit/angle)
include_directories(include/includes/uavcan/si/unit/angular_acceleration)
include_directories(include/includes/uavcan/si/unit/angular_velocity)
include_directories(include/includes/uavcan/si/unit/duration)
include_directories(include/includes/uavcan/si/unit/electric_charge)
include_directories(include/includes/uavcan/si/unit/electric_current)
include_directories(include/includes/uavcan/si/unit/energy)
include_directories(include/includes/uavcan/si/unit/force)
include_directories(include/includes/uavcan/si/unit/frequency)
include_directories(include/includes/uavcan/si/unit/length)
include_directories(include/includes/uavcan/si/unit/magnetic_field_strength)
include_directories(include/includes/uavcan/si/unit/mass)
include_directories(include/includes/uavcan/si/unit/power)
include_directories(include/includes/uavcan/si/unit/pressure)
include_directories(include/includes/uavcan/si/unit/temperature)
include_directories(include/includes/uavcan/si/unit/torque)
include_directories(include/includes/uavcan/si/unit/velocity)
include_directories(include/includes/uavcan/si/unit/voltage)
include_directories(include/includes/uavcan/si/unit/volume)
include_directories(include/includes/uavcan/si/unit/volumetric_flow_rate)
include_directories(include/includes/uavcan/time)

add_executable(jrb_can_bridge src/jrb_can_bridge.cpp
    libcanard/libcanard/canard.c)
ament_target_dependencies(jrb_can_bridge rclcpp std_msgs)
target_include_directories(jrb_can_bridge PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_compile_features(jrb_can_bridge PUBLIC c_std_99 cxx_std_17)  # Require C99 and C++17


add_executable(listener src/subscriber_member_function.cpp)
ament_target_dependencies(listener rclcpp std_msgs)

install(TARGETS
  jrb_can_bridge
  listener
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
