<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jrb_hardware_bridge</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="axel@mousset.me">Axel Mousset</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>serial</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>jrb_msgs</exec_depend>
  <exec_depend>serial_driver</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
